package io.github.landrynorris.app.compose

import androidx.compose.foundation.background
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Row
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.Add
import androidx.compose.material3.Icon
import androidx.compose.material3.IconButton
import androidx.compose.material3.Surface
import androidx.compose.material3.Text
import androidx.compose.material3.TextButton
import androidx.compose.material3.TextField
import androidx.compose.runtime.Composable
import androidx.compose.runtime.collectAsState
import androidx.compose.runtime.getValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.LocalClipboardManager
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.tooling.preview.Preview
import io.github.landrynorris.app.components.CreatePasswordLogic
import io.github.landrynorris.app.theme.AppTheme
import io.github.landrynorris.app.theme.colorScheme
import kotlinx.coroutines.flow.MutableStateFlow

@Composable
internal fun CreatePasswordPopup(logic: CreatePasswordLogic) {
    val state by logic.state.collectAsState()
    val clipboard = LocalClipboardManager.current
    Column(
        modifier = Modifier.fillMaxWidth().background(colorScheme.background),
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        TextField(
            modifier = Modifier.fillMaxWidth().contentDescription("NameField").testTag("NameField"),
            value = state.name,
            onValueChange = logic::nameChanged,
            label = { Text("Name") },
        )
        TextField(
            modifier =
                Modifier.fillMaxWidth().contentDescription("DomainField").testTag("DomainField"),
            value = state.domain,
            onValueChange = logic::domainChanged,
            label = { Text("Domain") },
        )

        Row {
            TextField(
                modifier = Modifier.contentDescription("PasswordField").testTag("PasswordField"),
                value = state.password,
                onValueChange = logic::passwordChanged,
                label = { Text("Password") },
            )
            IconButton(onClick = { logic.generateNewPassword(clipboard) }) {
                Icon(Icons.Default.Add, "generate new password")
            }
        }
        TextButton(
            modifier = Modifier.contentDescription("Confirm").testTag("Confirm"),
            onClick = logic::confirm,
            enabled = state.isConfirmEnabled,
        ) {
            Text("Confirm", color = colorScheme.onBackground)
        }
    }
}

@Preview
@Composable
private fun CreatePasswordPopupPreview() {
    AppTheme {
        Surface {
            CreatePasswordPopup(
                logic =
                    object : CreatePasswordLogic {
                        override val state =
                            MutableStateFlow(
                                io.github.landrynorris.app.components.CreatePasswordState(
                                    name = "Example Password",
                                    domain = "example.com",
                                    password = "Password123!",
                                    isConfirmEnabled = true,
                                )
                            )

                        override fun nameChanged(name: String) {}

                        override fun domainChanged(domain: String) {}

                        override fun passwordChanged(password: String) {}

                        override fun generateNewPassword(
                            clipboardManager: androidx.compose.ui.platform.ClipboardManager?
                        ) {}

                        override fun confirm() {}
                    }
            )
        }
    }
}
